--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
   <meta charset="UTF-8">
   <title>Firebase Chat</title>
   <link rel="stylesheet" href="estilos.css">
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
 </head>
 <body>
-  <h1>Chat</h1>
+
   <div class="container">
-    <div class="chat" id="chat"></div>
-    <div class="form">
-      <input class="chat-input" type="text" name="message" id="message" placeholder="Send your message...">
-      <button id="send-button">Send</button>
+    <h1>Chat</h1>
+    <div class="chat" id="chat">
+      <div class="loading-container" id="spin-container">
+        <i class="fa fa-circle-o-notch fa-spin fa-5x loading-item"></i>
+      </div>
     </div>
+    <div class="form">
+      <input class="chat-input" type="text" name="message" id="message" placeholder="Send your message..." autocomplete="off">
+        <span class="fa-stack submit" id="send-button">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-paper-plane-o fa-stack-1x"></i>
+        </span>
+    </div>
+  </div>
+  <div class="text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
